--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon",
+    "start": "ts-node-dev --respawn src/index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@types/express": "^4.17.15",
+    "@types/node": "^18.11.18",
+    "axios": "^1.2.2",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "got": "^12.5.3"
+    "express": "^4.18.2"
   }
 }
