Update start script in package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn src/index.ts",
+    "start": "npm install && npm run build && node build/src/index.js",
+    "start:dev": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
     "test": "jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1"
   },
