--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^29.2.5",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.10",
     "jest": "^29.3.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.4",
@@ -30,6 +31,7 @@
     "@types/node": "^18.11.18",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "validator": "^13.7.0"
   }
 }
