--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "axios": "^1.2.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "validator": "^13.7.0"
