--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^29.2.5",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
+    "aws-sdk-client-mock": "^2.0.1",
     "jest": "^29.3.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.4",
