--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "@types/swagger-ui-express": "^4.1.3",
     "aws-sdk": "^2.1297.0",
     "axios": "^1.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.0",
     "validator": "^13.7.0"
   }
 }
